--- a/java/.classpath
+++ b/java/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="E:/git/JavaEjercicio01/README.md"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
